# -*- makefile -*-
#
# Copyright (c) 2001-2002 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# This file is part of the Tsunami software package.  For license
# information, see the LICENSE file in the top level directory of the
# Tsunami source distribution.
#
# $Id$
#

noinst_HEADERS = \
	md5.h \
	tsunami.h \
	tsunami-client.h \
	tsunami-cvs-buildnr.h \
	tsunami-server.h

